WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
55945
[Qt] MemoryCache deadDecodedDataDeletionInterval is not exposed for client's usage
https://bugs.webkit.org/show_bug.cgi?id=55945
Summary
[Qt] MemoryCache deadDecodedDataDeletionInterval is not exposed for client's ...
Stanislav Paltis
Reported
2011-03-08 09:14:08 PST
There is no easy way to set deadDecodedDataDeletionInterval (of MemoryCache.h) as it is not exposed/exported in QtWebkit API. One way would be to add it to QWebSettings or use dynamic property. I implemented dynamic property _q_deadDecodedDataDeletionInterval . That interval is used to trigger when decoded data in dead list of object cache will be purged from cache.
Attachments
patch for review
(1.57 KB, patch)
2011-03-08 10:10 PST
,
Stanislav Paltis
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Stanislav Paltis
Comment 1
2011-03-08 10:10:17 PST
Created
attachment 85057
[details]
patch for review
Laszlo Gombos
Comment 2
2011-03-08 14:30:08 PST
Comment on
attachment 85057
[details]
patch for review r=me.
WebKit Commit Bot
Comment 3
2011-03-08 23:48:08 PST
Comment on
attachment 85057
[details]
patch for review Rejecting
attachment 85057
[details]
from commit-queue. Failed to run "['./Tools/Scripts/webkit-patch', '--status-host=queues.webkit.org', '--bot-id=cr-jail-4', 'apply-..." exit_code: 1 Last 500 characters of output: rks/Python.framework/Versions/2.6/lib/python2.6/urllib2.py", line 361, in _call_chain result = func(*args) File "/mnt/git/webkit-commit-queue/Tools/Scripts/webkitpy/thirdparty/autoinstalled/mechanize/_http.py", line 756, in https_open return self.do_open(conn_factory, req) File "/mnt/git/webkit-commit-queue/Tools/Scripts/webkitpy/thirdparty/autoinstalled/mechanize/_http.py", line 706, in do_open raise URLError(err) urllib2.URLError: <urlopen error [Errno 60] Operation timed out> Full output:
http://queues.webkit.org/results/8110593
Laszlo Gombos
Comment 4
2011-03-09 07:11:54 PST
Comment on
attachment 85057
[details]
patch for review Try again.
Eric Seidel (no email)
Comment 5
2011-03-09 08:59:48 PST
Odd. Looks like the cq failed to talk to bugzilla. We could definitely handle that better.
WebKit Commit Bot
Comment 6
2011-03-10 15:10:33 PST
The commit-queue encountered the following flaky tests while processing
attachment 85057
[details]
: fast/text/large-text-composed-char-dos.html
bug 56146
(author:
koivisto@iki.fi
) The commit-queue is continuing to process your patch.
WebKit Commit Bot
Comment 7
2011-03-10 15:11:05 PST
Comment on
attachment 85057
[details]
patch for review Clearing flags on attachment: 85057 Committed
r80769
: <
http://trac.webkit.org/changeset/80769
>
WebKit Commit Bot
Comment 8
2011-03-10 15:11:10 PST
All reviewed patches have been landed. Closing bug.
Caio Marcelo de Oliveira Filho
Comment 9
2011-03-11 12:38:29 PST
Revision
r80769
cherry-picked into qtwebkit-2.1.x with commit d8432cb562e5b4dd3ab7af1ad3a19b206d96c61e <
http://gitorious.org/+qtwebkit-developers/webkit/qtwebkit/commit/d8432cb562e5b4dd3ab7af1ad3a19b206d96c61e
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug